# oya

./: .gitignore  =2.5  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
src/: manage.py
src/oya/: __main__.py
src/oya/apps/: config.py  main.py  registry.py
src/oya/apps/asgi/: __init__.py  utils.py
src/oya/conf/: __init__.py  global_settings.py
src/oya/core/dto/: __init__.py
src/oya/core/exceptions/: __init__.py
src/oya/core/initializer/: starter.py
src/oya/core/initializer/templates/: manage.py.jinja
src/oya/core/initializer/templates/application/: apps.py.jinja  endpoints.py.jinja  models.py.jinja  tests.py.jinja
src/oya/core/initializer/templates/project/: main.py.jinja  settings.py.jinja
src/oya/core/management/: __init__.py  base.py  color.py  utils.py
src/oya/core/management/commands/: erase.py  heads.py  historydb.py  initdb.py  inspectdb.py  makemigrations.py  migrate.py  oya.py  rollback.py  runserver.py  runtest.py  shell.py
src/oya/core/serialization/: __init__.py
src/oya/db/: __init__.py  utils.py
src/oya/db/extras/: fields.py  models.py
src/oya/db/migrations/: __init__.py  migrate.py  models.py  utils.py
src/oya/db/migrations/ddl/: __init__.py  mysql.py  postgres.py  sqlite.py
src/oya/db/migrations/inspectdb/: mysql.py  postgres.py  sqlite.py
src/oya/middleware/builtins/: __init__.py
src/oya/tests/: __init__.py  runner.py  utils.py
src/oya/utils/: crypto.py  encoding.py  hashable.py  itercompat.py  module_loading.py  regex_helper.py  termcolors.py  text.py  version.py
